tests/baselines/reference/arrayLiterals5.errors.txt
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals5.ts(1,6): error TS1181: Array element destructuring pattern expected.
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals5.ts(1,11): error TS1005: '(' expected.
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals5.ts(1,13): error TS1109: Expression expected.
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals5.ts(1,16): error TS1005: '(' expected.
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals5.ts(1,18): error TS1128: Declaration or statement expected.
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals5.ts(2,6): error TS1181: Array element destructuring pattern expected.
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals5.ts(2,9): error TS1005: '(' expected.
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals5.ts(2,11): error TS2304: Cannot find name 'as'.
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals5.ts(2,13): error TS1005: ';' expected.
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals5.ts(2,15): error TS1128: Declaration or statement expected.
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals5.ts(3,9): error TS1003: Identifier expected.
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals5.ts(3,14): error TS1003: Identifier expected.
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals5.ts(3,16): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/expressions/arrayLiterals/arrayLiterals5.ts (13 errors) ====
    var [while, for] = [1, 3, ];
         ~~~~~
!!! error TS1181: Array element destructuring pattern expected.
              ~
!!! error TS1005: '(' expected.
                ~~~
!!! error TS1109: Expression expected.
                   ~
!!! error TS1005: '(' expected.
                     ~
!!! error TS1128: Declaration or statement expected.
    var [for, as] = [, , , , ];
         ~~~
!!! error TS1181: Array element destructuring pattern expected.
            ~
!!! error TS1005: '(' expected.
              ~~
!!! error TS2304: Cannot find name 'as'.
                ~
!!! error TS1005: ';' expected.
                  ~
!!! error TS1128: Declaration or statement expected.
    var [...break] = [...["hello"]];
            ~~~~~
!!! error TS1003: Identifier expected.
                 ~
!!! error TS1003: Identifier expected.
                   ~
!!! error TS1128: Declaration or statement expected.
    